@@ -39,6 +39,7 @@ Eight Ball (Free Play+)
 Eight Ball Deluxe (Player 2/4 Bonus Countdown Bugfix)
 Evel Knievel (Free Play+)
 Freedom (Free Play+ rev. 07 and 20)
+Gilligan's Island L-8
 Heavy Metal Meltdown (German)
 Jack*Bot 0.4A (Prototype)
 Mata Hari (Free Play+)
